--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,8 +1,8 @@
-#summary eID Archetype Usage
+#summary eID Seam Archetype Usage
 
 = Introduction =
 
-The eID Archetype Seam artifact provides an automatic generation of a blueprint for a Java EE applications with full eID integration. 
+The eID Seam Archetype artifact provides an automatic generation of a blueprint for a Java EE applications with full eID integration. 
 The following technology stack is being using:
   * JBoss AS 5.1.0.GA or 6.0.0.Final
   * Seam 2.2
