--- a/wiki/UsageJavaEE6.wiki
+++ b/wiki/UsageJavaEE6.wiki
@@ -9,8 +9,8 @@ The following technology stack is being using:
   * EJB 3.1
   * JSF 2.0
   * JPA 2.0
-  * !RichFaces 4.0
-  * Seam 3.0
+  * !RichFaces 4.1
+  * Seam 3.1
 
 = Requirements =
 
@@ -19,8 +19,8 @@ The following technology stack is being using:
   * Working smart card reader
   * a Belgian eID card
   * a Java EE 6 application server like:
-    * JBoss AS 7.0.1.Final (Web Profile is sufficient) together with Apache HTTPD Server
-    * Oracle !GlassFish 3.1.1 (eID login still not working)
+    * JBoss AS 7.1.0.Final (Web Profile is sufficient) together with Apache HTTPD Server
+    * Oracle !GlassFish 3.1.1
 
 = Status =
 
@@ -30,7 +30,7 @@ For now only the admin portal has been implemented.
 
 Run the following command:
 {{{
-mvn archetype:generate -DarchetypeGroupId=be.fedict.eid-archetype -DarchetypeArtifactId=eid-archetype-javaee6 -DarchetypeVersion=1.0.0.RC3 -DarchetypeRepository=https://www.e-contract.be/maven2/
+mvn archetype:generate -DarchetypeGroupId=be.fedict.eid-archetype -DarchetypeArtifactId=eid-archetype-javaee6 -DarchetypeVersion=1.0.0.RC4 -DarchetypeRepository=https://www.e-contract.be/maven2/
 }}}
 
 This will generate the application blueprint.
@@ -41,7 +41,7 @@ mvn clean install
 }}}
 
 
-= JBoss AS 7.0.1.Final =
+= JBoss AS 7.1.0.Final =
 
 Add to `socket-binding-group` of `standalone/configuration/standalone.xml`
 {{{
@@ -49,7 +49,7 @@ Add to `socket-binding-group` of `standalone/configuration/standalone.xml`
 }}}
 Also add to `subsystem xmlns="urn:jboss:domain:web:1.0"`
 {{{
-<connector name="ajp" protocol="AJP/1.3" socket-binding="ajp" scheme="ajp"/>
+<connector name="ajp" protocol="AJP/1.3" scheme="ajp" socket-binding="ajp"/>
 }}}
 Start the standalone configuration via:
 {{{
